refactor: 项目结构调整，代码结构优化。